--- a/packages/sandbox-client/index.html
+++ b/packages/sandbox-client/index.html
@@ -7,7 +7,7 @@
     <title>ATB Sandbox Client</title>
   </head>
   <body>
-    <div id="root"></div>
+    <main id="root" class="Col FlexGrow1"></main>
     <script type="module" src="./src/index.tsx"></script>
   </body>
 </html>
