feat (sandbox-client): move to bootstrap

--- a/packages/sandbox-client/index.html
+++ b/packages/sandbox-client/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ATB Sandbox Client</title>
   </head>
-  <body>
-    <main id="root" class="Col FlexGrow1"></main>
+  <body class="bg-primary">
+    <dev id="root" class="d-flex flex-column min-vh-100"></dev>
     <script type="module" src="./src/index.tsx"></script>
   </body>
 </html>
